--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </div>
       </section>
     </main>
+    <footer>Créé par Guillaume Ceccoli</footer>
     <script src="script.js"></script>
   </body>
 </html>
