--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" type="image/svg" href="assets/favicon.svg" />
     <title>Calculatrice</title>
   </head>
   <body>
     <main class="container">
       <section class="calculator">
-        <input type="text" id="input" class="input" placeholder="0" />
+        <div class="screen" id="screen">
+          <p class="result" id="result"></p>
+        </div>
         <div class="buttons">
           <button id="clear" class="operator">AC</button>
           <button id="add-or-substract" class="operator">+/-</button>
@@ -29,7 +32,7 @@
           <button id="substract" class="operator">-</button>
           <button id="decimal" class="number">.</button>
           <button id="zero" class="number">0</button>
-          <button id="return" class="operator"><=</button>
+          <button id="return" class="operator"><</button>
           <button id="equals" class="operator">=</button>
         </div>
       </section>
