debuggage du point decimal

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <button id="two" class="number">2</button>
           <button id="three" class="number">3</button>
           <button id="substract" class="operator" data-op="-">-</button>
-          <button id="decimal" class="number">.</button>
+          <button id="decimal" class="decimal">.</button>
           <button id="zero" class="number">0</button>
           <button id="return" class="return"><</button>
           <button id="equal" class="equal">=</button>
